--- a/src/public/frontend/css/templatemo-style.css
+++ b/src/public/frontend/css/templatemo-style.css
@@ -333,6 +333,9 @@ ul {
 
   z-index: 10;
 }
+div.cart-wrap{
+  padding-top: 50px;
+}
 .dash-popups{
   position: absolute;
   top: 10px;
@@ -350,7 +353,12 @@ ul {
   text-align: center;
   font-weight: bold;
 }
-
+#form-cart img{
+  margin: 0!important;
+}
+#form-cart tr td{
+  vertical-align: middle;
+}
 /* Welcome */
 .tm-welcome-section {
   background: #282726;
