--- a/src/views/layouts/home-layout.handlebars
+++ b/src/views/layouts/home-layout.handlebars
@@ -7,13 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cafe House</title>
 
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700' rel='stylesheet'type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700' rel='stylesheet'
+    type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Damion' rel='stylesheet' type='text/css'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href="/frontend/css/bootstrap.min.css" rel="stylesheet">
   <link href="/frontend/css/font-awesome.min.css" rel="stylesheet">
   <link href="/frontend/css/all.css" rel="stylesheet">
@@ -120,17 +122,17 @@
           <table class="table table-striped">
             <thead>
               <tr>
-                <th scope="col" id="tbl-list-cart-img"> </th>
-                <th scope="col">Tên sản phẩm</th>
-                <th scope="col" >Số lượng</th>
-                <th scope="col" >Size</th>
-                <th scope="col" >Lượng đường</th>
-                <th scope="col" >Giá</th>
-                <th id="deleteIcon"> </th>
+                <th scope="col" id="tbl-list-cart-img" style="width:6rem;"> </th>
+                <th scope="col" style="width:15rem;">Tên sản phẩm</th>
+                <th scope="col">Số lượng</th>
+                <th scope="col">Size</th>
+                <th scope="col" style="width:13rem;">Lượng đường</th>
+                <th scope="col">Giá</th>
+                <th id="deleteIcon" style="width:4rem;"> </th>
               </tr>
             </thead>
             <tbody id="form-cart-popups">
-              
+
             </tbody>
           </table>
         </div>
@@ -194,7 +196,9 @@
   <script src="/frontend/js/all.js"></script>
   <script src="/frontend/js/index.js"></script>
   <script src='https://cdn.jsdelivr.net/gh/vietblogdao/js/districts.min.js'></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 
   <script>
     $(document).ready(function () {
@@ -213,49 +217,49 @@
         })
       }, 4000)
     });
-</script>
-{{!-- lấy thành phố và huyện  --}}
-<script>
-$('select[name="address_provinces"]').each(function() {
-  var $this = $(this),
-  stc = ''
-  c.forEach(function(i, e) {
-    stc += '<option value="' + i + '">' + i + '</option>'
-    $this.html('<option value="">Tỉnh / Thành phố</option>' + stc)
-    if (address_1 = $('input.provinces').val()) {
-      $('select[name="address_provinces"] option').each(function() {
-        if ($(this).text() == address_1) {
-          $(this).attr('selected', '')
-          var str2 = ''
-          arr[$(this).index()-1].forEach(function(el) {
-              str2 += '<option value="' + el + '">' + el + '</option>'
-              $('select[name="address_district"]').html('<option value="">Quận / Huyện</option>' + str2)
-            })
+  </script>
+  {{!-- lấy thành phố và huyện --}}
+  <script>
+    $('select[name="address_provinces"]').each(function () {
+      var $this = $(this),
+        stc = ''
+      c.forEach(function (i, e) {
+        stc += '<option value="' + i + '">' + i + '</option>'
+        $this.html('<option value="">Tỉnh / Thành phố</option>' + stc)
+        if (address_1 = $('input.provinces').val()) {
+          $('select[name="address_provinces"] option').each(function () {
+            if ($(this).text() == address_1) {
+              $(this).attr('selected', '')
+              var str2 = ''
+              arr[$(this).index() - 1].forEach(function (el) {
+                str2 += '<option value="' + el + '">' + el + '</option>'
+                $('select[name="address_district"]').html('<option value="">Quận / Huyện</option>' + str2)
+              })
+            }
+          })
         }
-      }) 
-    }
-    $this.on('change', function(i) {
-      i = $this.children('option:selected').index() - 1
-      var str = '',
-      r = $this.val()
-      if (r != '') {
-        arr[i].forEach(function(el) {
-          str += '<option value="' + el + '">' + el + '</option>'
-          $('select[name="address_district"]').html('<option value="">Quận / Huyện</option>' + str)
+        $this.on('change', function (i) {
+          i = $this.children('option:selected').index() - 1
+          var str = '',
+            r = $this.val()
+          if (r != '') {
+            arr[i].forEach(function (el) {
+              str += '<option value="' + el + '">' + el + '</option>'
+              $('select[name="address_district"]').html('<option value="">Quận / Huyện</option>' + str)
+            })
+          } else {
+            $('select[name="address_district"]').html('<option value="">Quận / Huyện</option>')
+          }
         })
-      } else {
-        $('select[name="address_district"]').html('<option value="">Quận / Huyện</option>')
-      }
+      })
     })
-  })
-})
-if (address_2 = $('input.district').val()) {
-  $('select[name="address_district"] option').each(function() {
-    if ($(this).text() == address_2) {
-      $(this).attr('selected', '')
+    if (address_2 = $('input.district').val()) {
+      $('select[name="address_district"] option').each(function () {
+        if ($(this).text() == address_2) {
+          $(this).attr('selected', '')
+        }
+      })
     }
-  })
-}
   </script>
 
 </body>
