--- a/src/views/layouts/home-layout.handlebars
+++ b/src/views/layouts/home-layout.handlebars
@@ -139,7 +139,8 @@
       </div>
       <div class="text-right">
         <a href="/cart">
-          <button class="btn btn-lg btn-block btn-success text-uppercase outline">Thanh toán</button>
+          <button class="btn btn-lg btn-block btn-success text-uppercase outline">Thanh
+            toán</button>
         </a>
       </div>
     </div>
