--- a/src/views/frontend/cart.handlebars
+++ b/src/views/frontend/cart.handlebars
@@ -35,7 +35,7 @@
                 <button class="btn btn-block btn-light outline btn-lg">Tiếp tục mua hàng</button>
               </a>
             </div>
-            <div class="col-sm-12 col-md-6 text-right">
+            <div class="col-sm-12 col-md-6 text-right" id="checkTotalProduct">
               {{#if user.isExist}}
               <a href="/checkout">
                 {{else}}
