--- a/src/views/layouts/home-layout.handlebars
+++ b/src/views/layouts/home-layout.handlebars
@@ -57,7 +57,7 @@
                 <a href="/profile"><i class="fas fa-user icon"></i> Hi, {{user.user.name}}</a>
                 <ul id="menu-account">
                   <li><a href="/profile">Profile</a></li>
-                  <li><a href="">Logout</a></li>
+                  <li><a href="/logout">Logout</a></li>
                 </ul>
               </li>
               {{else}}
@@ -153,11 +153,11 @@
           <nav class="col-lg-3 col-md-3 tm-footer-nav tm-footer-div">
             <h3 class="tm-footer-div-title">MAIN MENU</h3>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Today special</a></li>
-              <li><a href="#">Menu</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">Account</a></li>
+              <li><a href="/">Home</a></li>
+              <li><a href="/today-special">Today special</a></li>
+              <li><a href="/menu">Menu</a></li>
+              <li><a href="/contact">Contact</a></li>
+              <li><a href="/profile">Account</a></li>
             </ul>
           </nav>
           <div class="col-lg-5 col-md-5 tm-footer-div">
