--- a/src/views/frontend/checkout.handlebars
+++ b/src/views/frontend/checkout.handlebars
@@ -57,7 +57,8 @@
           <div class="row">
             <div class="col-sm-12  col-md-6">
               <a href="/cart">
-                <button class="btn btn-block btn-light outline btn-lg">Chở về giỏ hàng</button>
+                <input type="button" class="btn btn-block btn-light outline btn-lg backToCart"
+                  value="Chở về giỏ hàng" />
               </a>
             </div>
             <div class="col-sm-12 col-md-6 text-right">
